@@ -44,6 +44,8 @@ dpkg (1.17.10) UNRELEASED; urgency=low
     - Add missing Dpkg::Deps::Multiple profile_is_concerned() and
       reduce_profiles() methods, inherited by Dpkg::Deps::Union,
       Dpkg::Deps::AND and Dpkg::Deps::OR.
+  * Do not mangle quilt series files with a missing newline on the last line.
+    Closes: #584233
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
